test/com/facebook/buck/parser/testdata/python_user_defined_rules/errors/skylark_errors/BUCK.fixture
load("//errors/skylark_errors:broken_impl.bzl", "broken_impl")

broken_impl(name = "broken_impl", content = "something")
